<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        style="@style/titleText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle"
        style="@style/subtitle"
        android:textStyle=""
        android:layout_marginStart="20dp"
        />

    <!-- Inputs -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerName"
        style="@style/basicStyle"
        android:layout_marginStart="20dp"
/>

    <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:layout_marginStart="20dp"
/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerCI"
        style="@style/basicStyle"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/identification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registerCI"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeAcount"
        style="@style/subtitle"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savingAcount"
            style="@style/basicStyle"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkingAcount"
            style="@style/basicStyle"
            />
        <Button
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttons"
            android:text="@string/btnRegister"
            />
    </RadioGroup>


</LinearLayout>